--- a/docs/www/style.css
+++ b/docs/www/style.css
@@ -83,9 +83,8 @@ html, body {
 	border-radius: 3px;
 	background: #f5f5f5;
 	border: 1px solid silver;
-}
-.content pre + pre {
 	margin-top: 5px;
+	margin-bottom: 5px;
 }
 .content code {
 	background: #f5f5f5;
@@ -109,14 +108,8 @@ html, body {
 	border: 1px solid silver;
 	padding: 3px;
 }
-.content h1 {
+.content h1, .content h2 {
 	border-bottom: 1px solid silver;
-}
-.content h2 ~ h2 {
-	margin-top: 25px;
-}
-.content h3 ~ h3 {
-	margin-top: 30px;
 }
 .content a {
 	color: #628FCB;
